--- a/package.json
+++ b/package.json
@@ -9,19 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.10",
+    "@radix-ui/themes": "^3.0.2",
+    "framer-motion": "^11.0.25",
+    "jquery": "^3.7.1",
+    "next": "14.0.2",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "react-icons": "^5.0.1",
+    "react-owl-carousel": "^2.3.3",
+    "react-tiny-slider": "^2.0.8",
+    "swiper": "^11.1.1",
+    "tiny-slider-react": "^0.5.7",
+    "webpack": "^5.91.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/jquery": "^3.5.29",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.2"
+    "typescript": "^5"
   }
 }
